- STYLING: Styling of html in forms
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3366 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 79dfe865d7172e210529fa3568d47c0766c0adea
Former-commit-id: 605a41beb6ed7d54d000b797e4ff801ddcfbc526
Former-commit-id: 62429fc4e55d68ff17485b682e086d33b4c42369 [formerly 7d27f1e4c1af9d26e70979719b7895889168f89d]
Former-commit-id: c5f94754410e126041a7d6153596ec5017c19607

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -923,6 +923,12 @@ tfoot tr.pagination .pagination_total {float:right;}
 	}
 
 
+hr {
+  border:none;
+  background-color:#DEA;
+  height:1px;
+}
+
 /* ============== form ================== */
 
 form {
@@ -984,6 +990,7 @@ div.flexyFormField:hover {
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 }
+div.flexyFormField .flexyFormHtml {float:left;}
 
 div.flexyFormField>label {
 	float:left;
