- CHANGED: Extra .js functionaliteit voor als de editor text is aangepast
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3390 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 6d21a79223645556fecb9ec3d2879467f3f074fb
Former-commit-id: 45a43abd4bf522689bb487b42be019dbd35669bf
Former-commit-id: 69297ca2e45cfc2f2c6f1234d9abef6f88edfe8c [formerly 9f7fca76ae61dc0136c9e70b14bd063dc744d2c8]
Former-commit-id: 6f150d171ba9c43f1f315f979a72a32e345bc6de

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1106,7 +1106,7 @@ body#tinymce th
 	line-height:1.3em;
 	letter-spacing:.04em;
 }
-
+#txt_stats {position:absolute;right:20px;}
 
 select {
 	width:460px;
