- ADDED: glyphicons - BUSY: DataModel Analyze @busy
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3392 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: c1912ad7f4e435a59834d7abddb3b68bf10d2b57
Former-commit-id: 6c61c22edf632e035f9e2706928d2aa45a905ad7
Former-commit-id: 6f6e53ad3f4207ff25b40488ba71fd522ed75356 [formerly 3e0129840442555a75885dad4ec4935c4195ef12]
Former-commit-id: 2b50ed228f747cf17caea431bd5a48799d15d071

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -20,6 +20,8 @@ a:hover {	text-decoration:underline; }
 
 a.autoLink { text-decoration:underline;}
 
+pre {margin:0px;}
+
 .phpinfo hr,
 .phpinfo img {
 	display:none;
@@ -1731,4 +1733,7 @@ iframe {
   margin:0px 20px 20px 0px;
 }
 #plugin_db_scheme thead td {border-bottom:solid 1px;}
-#plugin_db_scheme tbody td {background-color:#FFF;
+#plugin_db_scheme tbody td {background-color:#FFF;}
+  
+.diffright.selected {background-color:#DEA}
+.diffleft.selected {background-color:#DEA}
