--- a/sys/__test/css/ng-sortable.css
+++ b/sys/__test/css/ng-sortable.css
@@ -3,7 +3,7 @@
 /* ************************************** */
 
 .as-sortable-item, .as-sortable-placeholder {
-    display: block;
+/*    display: block;*/
 }
 
 .as-sortable-item {
