--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1142,7 +1142,7 @@ body.normal_dropdowns select.image_dropdown {margin-top:0px;}
 .flexyFormField.fieldtype_medias select.image_dropdown {	width:460px;}
 
 .flexyFormField.fieldtype_media {min-height:35px;}
-.flexyFormField.fieldtype_medias {min-height:36px;}
+.flexyFormField.fieldtype_medias {min-height:132px;}
 body.normal_dropdowns .flexyFormField.fieldtype_medias {
 /*  float:left;*/
   height:200px;
@@ -1151,9 +1151,9 @@ body.normal_dropdowns .flexyFormField.fieldtype_medias {
 .flexyFormField .flash,
 .flexyFormField img {
 	float:left;
-	width: 25px;
-	height: 25px;
-	min-width:25px;
+  width:     auto;
+  height:    75px;
+  min-width: auto;
 	margin:0px;
 	background-color: transparent;
 }
@@ -1255,7 +1255,7 @@ input.button {
 .flexyFormField ul.multiple,
 .flexyFormField ul.choices {
 	max-width:none;
-	max-height:125px;
+	max-height:200px;
 	overflow:auto;
 	padding:3px 3px 4px 4px;
 	margin-right:1px;
@@ -1273,8 +1273,6 @@ input.button {
 	margin-left:0px;
 }
 
-
-
 .flexyFormField>ul li {
 	list-style:none;
 	display:block;
@@ -1282,8 +1280,8 @@ input.button {
 	top:0px;
 	margin:px;
 	padding:2px;
-	height:25px;
-	max-width:50px;
+	height: 75px;
+/*  max-width:50px;*/
 	cursor:pointer;
 	background-color:transparent;
 }
