- STYLING: Bigger thumbs
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3424 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: ee1ed9f3dc6f6174415fe2db658bcc84241aedcd
Former-commit-id: fe8663a37327132e719523bd8bec3f3eb8119ef6
Former-commit-id: 0094b3736f5e51e303042343669b1ad5e76bfeb1 [formerly f9b3ab1c862dfcbf4da0b31a232ac39a1b0a46e1]
Former-commit-id: 758bae06f09c9744eaf0f51dfe86dea882e33440

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1266,6 +1266,16 @@ input.button {
 .flexyFormField ul.values {
 	width:450px;
 }
+.flexyFormField ul.choices img {
+	filter:alpha(opacity=80);
+  opacity:.8;
+	-moz-opacity:0.8;
+}
+.flexyFormField ul.choices img:hover {
+	filter:alpha(opacity=100);
+  opacity:1;
+	-moz-opacity:1;
+}
 
 .flexyFormField.image_dragndrop.wide ul.choices,
 .flexyFormField.image_dragndrop.big  ul.choices {
