- NEW: added translate service - NEW: added alert service - NEW: added dialig service - NEW: grid DELETE works now (with dialog / alert / translation)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3430 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 7687f291750480910027949c2cfafc66dbda2d34
Former-commit-id: c6770ee014e607608ffe9fe5ac6d7bf7da29d5ce
Former-commit-id: f6a73d69438a109586b46d0025d0203945b5b5db [formerly 401f6d905ddf52bb0558a22da4cea119e15c8caa]
Former-commit-id: 66cc02accf6ee4887c10f96b45aecb3726e9b9f8

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -93,3 +93,7 @@
   padding:(@table-cell-padding - 1);
 }
 .as-sortable-drag span.flexy-grid-unselected {display:none;}
+
+.as-sortable-item, .as-sortable-placeholder {
+  display: table-row;
+}
