--- a/sys/__test/css/ng-sortable.css
+++ b/sys/__test/css/ng-sortable.css
@@ -3,7 +3,7 @@
 /* ************************************** */
 
 .as-sortable-item, .as-sortable-placeholder {
-/*    display: block;*/
+    display: block;
 }
 
 .as-sortable-item {
@@ -13,6 +13,8 @@
 
 .as-sortable-item-handle {
     cursor: move;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
 }
 
 .as-sortable-placeholder {
