--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -46,6 +46,8 @@ header, footer {height:@flexy-header-height;}
 #loading-bar-spinner {top:50%;left:50%;margin-left:-17px;margin-top:-17px;}
 #loading-bar-spinner .spinner-icon {width: 34px;height: 34px;border:solid 3px transparent;border-top-color:#CCC;border-left-color:#CCC;border-radius: 17px;}
 
+/* ALERTS */
+// .flexy-alerts {position:fixed;}
 
 /* PANELS */
 .panel-heading {height:42px;overflow:hidden;padding:7px 1rem;}
