- NEW: styling dialogs and alerts
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3438 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 93927789e3527e3f61814942baac72f0b5660b8e
Former-commit-id: b9f58b59ae611bdd39fb6c01ddfecf0f528589c3
Former-commit-id: aff31ccfdefedd48271571f30627b3e75f2e641d [formerly bcefc1715f689d6516a53d5646c841265ffcff62]
Former-commit-id: 4df1edee7030cb6cdea2f3764ffb380fe0ae4d43

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -48,7 +48,25 @@ header, footer {height:@flexy-header-height;}
 #loading-bar-spinner .spinner-icon {width: 34px;height: 34px;border:solid 3px transparent;border-top-color:#CCC;border-left-color:#CCC;border-radius: 17px;}
 
 /* ALERTS */
-// .flexy-alerts {position:fixed;}
+.flexy-alerts {
+  display:block;
+  position:fixed;
+  top:-@border-radius-base;
+  left:50%;
+  margin-left:-320px;
+  width:640px;
+  z-index:999999;
+}
+.flexy-alerts .alert { box-shadow:0 3px 9px #000; }
+
+/* DIALOGS */
+.modal-dialog {margin-top:(@flexy-header-height + @flexy-margins);}
+.dialog-header-confirm {
+  background-color:@brand-danger;
+  border-top-left-radius:@border-radius-base;
+  border-top-right-radius:@border-radius-base;
+}
+.dialog-header-confirm * {color:@body-bg;}
 
 /* PANELS */
 .panel-heading {height:42px;overflow:hidden;padding:7px 1rem;}
