- API: new api: table_order - CHANGED order->set_all() returns changed set instead of $this - NEW: grid styling - NEW: grid ordering server call
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3445 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 4e3007235d253942d6d11b91828190497dd690ec
Former-commit-id: dbd3bd73b99834bc2db0a8b2e4da56e7acfd7af7
Former-commit-id: 826d5d635cefda8bdeb1e2aeb8f32792d44276e0 [formerly cc2f831a2e4080f5c049ba9c5c28ad695c25f375]
Former-commit-id: 9f6c39cff170401834ab6b6240c9b539c2cfee2a

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -31,10 +31,10 @@
 .flexy-grid th.actions .action-remove {display:none;}
 .flexy-grid .flexy-grid-has-selection th.actions .action-remove {display:inline;}
 /* Hidden Columns */
-.flexy-grid th.flexy-grid-field-id, .flexy-grid td.flexy-grid-field-id, .as-sortable-drag td.flexy-grid-field-id,
-.flexy-grid th.flexy-grid-field-uri, .flexy-grid td.flexy-grid-field-uri, .as-sortable-drag td.flexy-grid-field-uri,
-.flexy-grid th.flexy-grid-field-order, .flexy-grid td.flexy-grid-field-order, .as-sortable-drag td.flexy-grid-field-order,
-.flexy-grid th.flexy-grid-field-self_parent, .flexy-grid td.flexy-grid-field-self_parent, .as-sortable-drag td.flexy-grid-field-self_parent,
+.flexy-grid th.flexy-grid-field-id, .flexy-grid td.flexy-grid-field-id, //.as-sortable-drag td.flexy-grid-field-id,
+.flexy-grid th.flexy-grid-field-uri, .flexy-grid td.flexy-grid-field-uri, //.as-sortable-drag td.flexy-grid-field-uri,
+.flexy-grid th.flexy-grid-field-order, .flexy-grid td.flexy-grid-field-order, //.as-sortable-drag td.flexy-grid-field-order,
+.flexy-grid th.flexy-grid-field-self_parent, .flexy-grid td.flexy-grid-field-self_parent, //.as-sortable-drag td.flexy-grid-field-self_parent,
 .flexy-grid td.flexy-grid-field-_info {display:none;}
 /* Column Styling */
 .flexy-grid .flexy-grid-sortable-column {cursor:pointer;}
@@ -75,6 +75,12 @@
 
 
 /* ng-sortable */
+.as-sortable-item, .as-sortable-placeholder, .as-sortable-drag {
+  display: table-row!important;
+}
+.as-sortable-item.hidden {
+  display:none!important;
+}
 .as-sortable-drag {
   overflow:hidden;
   border:1px dotted @brand-primary;
@@ -93,7 +99,3 @@
   padding:(@table-cell-padding - 1);
 }
 .as-sortable-drag span.flexy-grid-unselected {display:none;}
-
-.as-sortable-item, .as-sortable-placeholder {
-  display: table-row;
-}
