- NEW: FlexyField directive - NEW: FlexyFieldThumbs directive
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3453 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 31ba1190ee3f85e432315049d44e542f6fda2f61
Former-commit-id: d141e194543f06ce5f5df6e2c709cf0c978fcc4c
Former-commit-id: 312a4eb3f357495ecbab484a2cf9c0e7ea6338d0 [formerly c164eebdc8408d37dc93b371432aea4c61908cf7]
Former-commit-id: b74396027816141a55a4f8a9a597fac6554a5f69

--- a/sys/__test/less/flexy-grid.less
+++ b/sys/__test/less/flexy-grid.less
@@ -43,10 +43,9 @@
 .flexy-grid th.flexy-grid-field-str_title, .flexy-grid td.flexy-grid-field-str_title {max-width:none;text-overflow:inherit;}
 .flexy-grid th.flexy-grid-field-type-txt, .flexy-grid td.flexy-grid-field-type-txt {max-width:350px;}
 .flexy-grid th.flexy-grid-field-type-media, .flexy-grid td.flexy-grid-field-type-media,
-.flexy-grid th.flexy-grid-field-type-rgb, .flexy-grid td.flexy-grid-field-type-rgb {text-align:center;width:52px;max-width:52px; }
 .flexy-grid th.flexy-grid-field-type-medias, .flexy-grid td.flexy-grid-field-type-medias {min-width:120px;max-width:600px;}
+.flexy-grid th.flexy-grid-field-type-rgb, .flexy-grid td.flexy-grid-field-type-rgb {text-align:center;max-width:none;text-overflow:none; }
 .flexy-grid th.flexy-grid-field-type-tme, .flexy-grid td.flexy-grid-field-type-tme {max-width:none; width:130px;}
-.flexy-grid th.flexy-grid-field-type-rgb, .flexy-grid td.flexy-grid-field-type-rgb {min-width:25px;max-width:50px;}
 /* ROW Actions */
 .flexy-grid .table-sortable tr .actions .as-sortable-handle {display:none}
 /* ROW SELECTION */
@@ -55,6 +54,32 @@
 .flexy-grid tr .action-select span.flexy-grid-unselected {display:inline;}
 .flexy-grid tr.st-selected .action-select span.flexy-grid-unselected {display:none;}
 .flexy-grid tr.st-selected .action-select span.flexy-grid-selected {display:inline;}
+
+
+/* FIELD TYPES */
+.flexy-grid tbody td span.field-type-rgb {
+  display:block;
+  width:100%;
+  height:24px;
+  padding:1px 5px;
+  border-radius:@border-radius-base;
+  text-align:center;
+}
+.flexy-grid tbody td div.thumb {
+  float:left;
+  display:block;
+  height:24px;
+  width:auto;
+  margin-right:@border-radius-base;
+  border-radius:@border-radius-base;
+  overflow:hidden;
+}
+.flexy-grid tbody td div.thumb img {
+  display:block;
+  width:auto;
+  height:100%;
+}
+
 
 /* tree, branches & nodes */
 .flexy-grid tbody tr.flexy-tree-child td.flexy-grid-field-str_title {background-image:url('../img/tree_lastnode.gif');background-repeat:no-repeat;}
