--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -114,11 +114,12 @@
   background-color:@gray-lighter;
 }
 .as-sortable-drag td {
-  display:block;
   white-space:nowrap;
   overflow:hidden;
   text-overflow:ellipsis;
   height:34px;
+  max-width:none;
+  min-width:none;
   margin:0px;
   float:left;
   clear:none;
