- BUG: Filemanager of bestand al bestaat - BUG: MY_Email als arrays worden gebruikt
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3471 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 8fcf8fefc672d019b64f595c9f61cdf23c7485d0
Former-commit-id: 6d317ae1c4937a8a29916f5afced424ce616b97f
Former-commit-id: 8edb31aef25e1ee020d8bb8898dd66cf68361fbf [formerly 242dd6c466c506cca061bed5e1290e9140d90540]
Former-commit-id: 25f4170509df9d1c0f3087dec2191b7a1ec641f6

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1081,7 +1081,7 @@ textarea, .mceEditor {
 	width:450px;
 }
 textarea.md {height:400px;}
-.mceEditor table {
+.mceEditor>table {
 	width:450px;
 }
 li textarea {width:100%;}
