--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -186,7 +186,7 @@ img {
 	}
 #menu li.API_plugin_stats a,
 #menu li.log_geocode_cache a,
-#menu li.log_login a,
+#menu li.log_activity a,
 #menu li.log_cronjobs a,
 #menu li.log_stats a {
 	background-image: url("../icons/stats.gif");
