- NEW: TableModel: Res_media_files - API: Table & Row also handling media assets met Res_media_files - NEW: Showing & Deleting files
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3511 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: e42014cb2399e480d948f6f425b87c52c21014bd
Former-commit-id: 6faa4204476cdb467410c32830b2da102b3f5449
Former-commit-id: dcf1e9b7fd72463623c1549044dacf277863624a [formerly 8fcbe1d542caf8cb19cd793c65bdfbeaa78cfeaf]
Former-commit-id: 8b2c0c4eea3e60b1d6021a20d95bc7e3a33bf64f

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -81,7 +81,8 @@
   width:auto;
   height:100%;
 }
-.flexy-table tbody td div.thumb .fa {font-size:24px;color:@brand-info;}
+.flexy-table tbody tr td div.thumb .fa {font-size:24px;color:@brand-info;}
+.flexy-table tbody tr.st-selected td div.thumb .fa {font-size:24px;color:@body-bg;}
 
 
 
