- TableModel: get_row( -1 ) gives defaults - NEW: Busy with form
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3514 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 78ed2d707c33a20f6ee0d599290222c6cb637bc1
Former-commit-id: f5300b8e1db5b73b2432734d1ce59767e628b1ee
Former-commit-id: d64a7f7688e00635c906141705a2d3c2008aaf55 [formerly 07508444593cbdf4bbf340e1b0b24898e1f6366b]
Former-commit-id: 0331399cd57090274bbe50b713773c67a62a1b47

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -73,12 +73,12 @@ header, footer {height:@flexy-header-height;}
 .panel-heading {height:@flexy-panel-title-height;overflow:hidden;padding:7px 1rem;}
 .panel-heading h3 {text-transform:uppercase;margin:0;float:left}
 .panel-heading>div {float:right;}
-.panel-heading span.glyphicon-floppy-disk {margin-left:1rem;}
+.panel-heading span.glyphicon {margin-left:1rem;}
 .panel-content, .panel-footer {padding:2rem;}
 
 
 /* FORMS */
-label,button {text-transform:uppercase;}
+label,button,.btn {text-transform:uppercase;}
 label {display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .form-group {border-radius:@border-radius-base;}
 // .form-group:hover {background-color:@gray-lighter;}
