- BUG small styling bug (when media very wide)
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3557 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 4230adbba91a89f0b52aee359795d433a92da3ba
Former-commit-id: df7c724960c9afb3bfa35c3335c313a3c32a692f
Former-commit-id: bd74094864bf50a4476aebb34974613c96f28ee9 [formerly 705f1f6f7ad910659227ece6d794f17f84ab5da1]
Former-commit-id: d1d7ccc07f8bb2cd48f45a0fc2f67b4adcace0bf

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1269,6 +1269,7 @@ input.button {
 .flexyFormField ul.values {
 	width:450px;
   min-height:79px;
+  overflow-x:hidden;
 }
 .flexyFormField ul.choices img {
 	filter:alpha(opacity=80);
