- NEW: Selecting items in table only by checkbox - NEW: Cancel on form returns to table (not with history) so selection is reset
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3570 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 0a3ac1facbad085055e7e223b2aa73cd646f9c18
Former-commit-id: 9472783018f8e181bad131dc236f695935db27e9
Former-commit-id: be1c178b4f7e894086ab9b75a3255aeac2366748 [formerly 3c5cfed143c61ed10e135333171fa66cc227e46e]
Former-commit-id: 9908480cc2b2f87bf1bbd538dc731b67582881b8

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -49,11 +49,11 @@
 /* ROW Actions */
 .flexy-table .table-sortable tr .actions .as-sortable-handle {display:none}
 /* ROW SELECTION */
-.flexy-table tr.st-selected td {background-color:@brand-info!important;}
+.flexy-table tr.flexy-table-selected td {background-color:@brand-select!important;}
 .flexy-table tr .action-select span.flexy-table-selected {display:none;}
 .flexy-table tr .action-select span.flexy-table-unselected {display:inline;}
-.flexy-table tr.st-selected .action-select span.flexy-table-unselected {display:none;}
-.flexy-table tr.st-selected .action-select span.flexy-table-selected {display:inline;}
+.flexy-table tr.flexy-table-selected .action-select span.flexy-table-unselected {display:none;}
+.flexy-table tr.flexy-table-selected .action-select span.flexy-table-selected {display:inline;}
 
 
 /* FIELD TYPES */
