- NEW: busy with media in forms & uploading files
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3589 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: a6410d06e197b292ca5c8e5a89bf463d1c6e8de6
Former-commit-id: c6bf852262afc7c8f4e206065109864ce6f39720
Former-commit-id: 99cb185f84b3f9eb503cc6525142587c47515991 [formerly 12843faa5c0baa088ca7e71b9afb1e58d8975c20]
Former-commit-id: e14a82e0117923056493fe0b4579134609d4197d

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -76,6 +76,25 @@ header, footer {height:@flexy-header-height;}
 .panel-heading span.glyphicon {margin-left:1rem;}
 .panel-content, .panel-footer {padding:2rem;}
 
+/* THUMBNAILS */
+.thumbnail {
+  float:left;
+  display:block;
+  height:130px;
+  width:auto;
+  margin:0px;
+  overflow:hidden;
+}
+.thumbnail img {
+  display:block;
+  width:auto;
+  height:100px;
+}
+.thumbnail .caption {
+  padding:0px;
+  text-align:center;
+}
+
 
 /* FORMS */
 label,button,.btn {text-transform:uppercase;}
@@ -90,7 +109,10 @@ label {display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 .form-inline .form-group {width:100%;}
 .form-inline .form-group>div {.make-sm-column-offset(3);padding-left:7px}
 .help-block {margin:0px}
+
 /* FIELDS */
+
+
 
 
 /* GENERAL */
