--- a/sys/__test/less/flexy-form.less
+++ b/sys/__test/less/flexy-form.less
@@ -6,6 +6,17 @@
 /* Labels geen status kleur */
 .flexy-form .form-group label {color:@text-color!important;}
 .flexy-form .form-group:hover label {color:@brand-primary!important;}
+// .flexy-form .has-success .form-control {border-color:@gray-lighter;}
 
-/* Geen zwarte rand boven HTML editor */
+/* Froala Editor */
 .fr-toolbar { border-top:none; }
+.fr-wrapper { max-height:300px }
+
+/* MEDIA */
+.media-actions {float:left;margin-right:.5rem}
+.flexy-form-thumbs {}
+.flexy-form-thumbs .thumbnail { float:left; margin-right:.25rem; height:34px; padding:0px; border:none; }
+.flexy-form-thumbs .thumbnail img { height:34px; }
+.flexy-form-thumbs .thumbnail .caption { display:none }
+
+
