- NEW: busy with uploading files
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3590 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: c5e6c309c03bc96eba1822ff8a963bd96104f83c
Former-commit-id: 2ae4839cb771bb933330bfd1fadc7e50ea5fc642
Former-commit-id: e606a43a70f1bc435f7e5714930599d005071c4b [formerly c3e7a95732f878e45dfad661e67902fcd0af411f]
Former-commit-id: d74a70a1f9df502bfaf8cec22fe2844718ba04d8

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -56,6 +56,12 @@
 .flexy-table tr.flexy-table-selected .action-select span.flexy-table-selected {display:inline;}
 
 
+/* UPLOADER */
+.flexy-table .file-browser {
+  padding:1rem;
+}
+
+
 /* FIELD TYPES */
 
 /* RGB */
@@ -73,10 +79,10 @@
 .flexy-table table.table-media .flexy-table-field-path      {display:none}
 
 /* MEDIA as list */
-.flexy-table table.media-view-list .thumbnail { height:auto; border:none; border-radius:0px; padding:0px; margin:0px .25rem 0px 0px; background-color:transparent;}
-.flexy-table table.media-view-list .thumbnail img { height:23px;float:left; }
+.flexy-table table.media-view-list .thumbnail { height:23px; border:none; border-radius:0px; padding:0px; margin:0px .25rem 0px 0px; background-color:transparent; overflow:visible;}
+.flexy-table table.media-view-list .thumbnail img { height:23px; float:left; margin-right:.5rem; }
 .flexy-table table.media-view-list .thumbnail .caption { display:none; }
-.flexy-table table.table-media.media-view-list .thumbnail .caption { display:inline; float:left; margin-left:1rem;}
+.flexy-table table.table-media.media-view-list .thumbnail .caption {display:block;}
 
 /* MEDIA as thumbs */
 .flexy-table table.table-media.media-view-thumbs td.actions {
