--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -81,7 +81,7 @@ header, footer {height:@flexy-header-height;}
   float:left;
   display:block;
   height:130px;
-  width:auto;
+  width:143px;
   margin:0px;
   overflow:hidden;
 }
@@ -89,6 +89,7 @@ header, footer {height:@flexy-header-height;}
   display:block;
   width:auto;
   height:100px;
+  margin:auto;
 }
 .thumbnail .caption {
   padding:0px;
