- NEW: Uploader -> drag ndrop on whole panel - NEW: Some styling issues with media
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3596 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 2ff69fafbcd5f2ffa65b707472d935b059140f02
Former-commit-id: 9cfc3398d074c8b32f327d7a28a20deb61199ede
Former-commit-id: 5a87500443987aa9bcee1335fede69009fbdf5c6 [formerly e7842448d9d8546c96d0b0f8bb8045f79eafc94b]
Former-commit-id: 4f3c50478e5e3c5c0b254e594ac50a2736173c5e

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -1,6 +1,8 @@
 /* FLEXY-GRID */
 
 /* HEADER-FOOTER & PANEL*/
+.flexy-table .panel-title {background-color:@brand-primary;} 
+.flexy-table .panel-title>h3 {color:@body-bg;} 
 .flexy-table .panel-heading form {margin-top:-2px;}
 .flexy-table .panel-heading input {padding-left:30px;}
 .flexy-table .panel-heading .glyphicon {left:0;}
@@ -84,11 +86,13 @@
 .flexy-table table.table-media .flexy-table-field-path      {display:none}
 .flexy-table table.media-view-thumbs .thumbnail .caption { max-width:130px;overflow:hidden;text-overflow:ellipsis;}
 
+
 /* MEDIA as list */
 .flexy-table table.media-view-list .thumbnail { height:23px; border:none; border-radius:0px; padding:0px; margin:0px .25rem 0px 0px; background-color:transparent; overflow:visible;}
-.flexy-table table.media-view-list .thumbnail img { height:23px; float:left; margin-right:.5rem; }
+.flexy-table table.media-view-list .thumbnail img, .flexy-table table.media-view-list .thumbnail span.fa { height:23px; float:left; }
+.flexy-table table.media-view-list .thumbnail span.fa:before {font-size:23px;}
 .flexy-table table.media-view-list .thumbnail .caption { display:none; }
-.flexy-table table.table-media.media-view-list .thumbnail .caption {display:block;}
+.flexy-table table.table-media.media-view-list .thumbnail .caption {display:block;float:right;}
 
 /* MEDIA as thumbs */
 .flexy-table table.table-media.media-view-thumbs td.actions {
@@ -100,6 +104,7 @@
   background-color:transparent!important;
   z-index:99999;
 }
+.flexy-table table.table-media.media-view-thumbs .thumbnail span.fa:before { font-size:100px;margin-left:25px; }
 .flexy-table table.table-media.media-view-thumbs td.actions .btn {display:none}
 .flexy-table table.table-media.media-view-thumbs td.actions .btn.action-select {display:inline;}
 .flexy-table table.table-media.media-view-thumbs th.flexy-table-field-file        {display:none}
@@ -110,6 +115,7 @@
 .flexy-table table.table-media.media-view-thumbs .flexy-table-field-int_size      {display:none}
 .flexy-table table.table-media.media-view-thumbs .flexy-table-field-int_img_width {display:none}
 .flexy-table table.table-media.media-view-thumbs .flexy-table-field-int_img_height{display:none}
+
 /* TR TD as DIV */
 .flexy-table table.table-media.media-view-thumbs tbody tr {
   display:block!important;
