--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -73,7 +73,7 @@ header, footer {height:@flexy-header-height;}
 .panel-heading {height:@flexy-panel-title-height;overflow:hidden;padding:7px 1rem;}
 .panel-heading h3 {text-transform:uppercase;margin:0;float:left}
 .panel-heading>div {float:right;}
-.panel-heading span.glyphicon {margin-left:1rem;}
+.panel-heading .btn span.glyphicon {margin-left:1rem;}
 .panel-content, .panel-footer {padding:2rem;}
 
 /* THUMBNAILS */
