--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -89,10 +89,10 @@
 
 /* MEDIA as list */
 .flexy-table table.media-view-list .thumbnail { height:23px; border:none; border-radius:0px; padding:0px; margin:0px .25rem 0px 0px; background-color:transparent; overflow:visible;}
-.flexy-table table.media-view-list .thumbnail img, .flexy-table table.media-view-list .thumbnail span.fa { height:23px; float:left; }
+.flexy-table table.media-view-list .thumbnail img, .flexy-table table.media-view-list .thumbnail span.fa { height:23px; margin:0px; }
 .flexy-table table.media-view-list .thumbnail span.fa:before {font-size:23px;}
 .flexy-table table.media-view-list .thumbnail .caption { display:none; }
-.flexy-table table.table-media.media-view-list .thumbnail .caption {display:block;float:right;}
+.flexy-table table.table-media.media-view-list .thumbnail .caption {display:block;margin-top:-23px;margin-left:40px;overflow:hidden;text-overflow:ellipsis;}
 
 /* MEDIA as thumbs */
 .flexy-table table.table-media.media-view-thumbs td.actions {
